web/book/tests/snapshots/snapshot__syntax__expressions-and-operators__parentheses__1.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\nderive total_distance = sum distance\n"
---
Error:
   ╭─[:2:29]
   │
 2 │ derive total_distance = sum distance
   │                             ────┬───
   │                                 ╰───── Unknown name
───╯

